--- a/p/math-typesetting/index.html
+++ b/p/math-typesetting/index.html
@@ -284,7 +284,7 @@
     <section class="article-content">
     
     
-    <p>Mathematical notation in a Hugo project can be enabled by using third party JavaScript libraries 在.</p>
+    <p>Mathematical notation in a Hugo project can be enabled by using third party JavaScript libraries.</p>
 <p>In this example we will be using <a class="link" href="https://katex.org/"  target="_blank" rel="noopener"
     >KaTeX</a></p>
 <ul>
@@ -314,8 +314,8 @@
 
 <h3 id="examples">Examples</h3>
 
-<p>Block math:</p>
-<p>$$
+<p>Block math:
+$$
 \varphi = 1+\frac{1} {1+\frac{1} {1+\frac{1} {1+\cdots} } }
 $$</p>
 </section>
