--- a/p/线程/index.html
+++ b/p/线程/index.html
@@ -22,7 +22,7 @@
 
 <link rel='canonical' href='https://www.imxiejie.me/p/%E7%BA%BF%E7%A8%8B/'>
 
-<link rel="stylesheet" href="/scss/style.min.8191399262444ab68b72a18c97392f5349be20a1615d77445be51e974c144cff.css"><meta property='og:title' content='线程'>
+<link rel="stylesheet" href="/scss/style.min.90546427ecbd2d81195644e247faf6b81eebafbfbea54637562a06e03a04bbda.css"><meta property='og:title' content='线程'>
 <meta property='og:description' content='一、线程 线程 是最小的执行单元，一个进程由一个或多个线程组成。一个进程内的所有信息对该进程内的所有线程都是共享的。
 同进程一样，线程也有一个唯一标识 ID，但线程 ID 只在同一进程内才有意义，跟进程 ID 不同的是，线程 ID 是由一个结构体来表示，所以在对线程 ID 进行比较时，需要使用函数来比较。
 在创建一个线程后，线程的运行顺序是不确定的，不能保证调用线程和新建线程的执行顺序。
@@ -419,6 +419,29 @@
     </footer>
 
 
+    
+        <link 
+                rel="stylesheet" 
+                href="https://cdn.jsdelivr.net/npm/katex@0.15.6/dist/katex.min.css"integrity="sha256-J&#43;iAE0sgH8QSz9hpcDxXIftnj65JEZgNhGcgReTTK9s="crossorigin="anonymous"
+            ><script 
+                src="https://cdn.jsdelivr.net/npm/katex@0.15.6/dist/katex.min.js"integrity="sha256-InsNdER1b2xUewP&#43;pKCUJpkhiqwHgqiPXDlIk7GzBu4="crossorigin="anonymous"
+                defer
+                >
+            </script><script 
+                src="https://cdn.jsdelivr.net/npm/katex@0.15.6/dist/contrib/auto-render.min.js"integrity="sha256-y39Mpg7V3D4lhBX4x6O0bUqTV4pSrfgwEfGKfxkOdgI="crossorigin="anonymous"
+                defer
+                >
+            </script><script>
+    window.addEventListener("DOMContentLoaded", () => {
+        renderMathInElement(document.querySelector(`.article-content`), {
+            delimiters: [
+                { left: "$$", right: "$$", display: true },
+                { left: "$", right: "$", display: false },
+                { left: "\\(", right: "\\)", display: false },
+                { left: "\\[", right: "\\]", display: true }
+            ]
+        });})
+</script>
     
 </article>
 
